--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Transportation Expenses</string>
+    <!-- メイン画面 -->
+    <string name="main_button_ic_read">ICカードを読み取る</string>
+    <string name="main_button_table_make">勤務表を作成する</string>
 </resources>
