--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <!-- toolbar menu -->
     <string name="main_toolbar_menu_title_history">履歴一覧</string>
     <!-- ICカード読み取り画面 -->
+    <string name="title_ic_read_activity">ICカード読み取り</string>
     <string name="ic_read_text">ICカードをスマートフォンにかざしてください。</string>
 </resources>
