--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <!-- ICカード読み取り画面 -->
     <string name="title_ic_read_activity">ICカード読み取り</string>
     <string name="ic_read_text">ICカードをスマートフォンにかざしてください。</string>
+    <!-- ICカード履歴一覧画面 -->
+    <string name="ic_history_header_text">私用の履歴はチェックを外してください</string>
+    <string name="ic_history_save_button">保存</string>
 </resources>
