--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -9,9 +9,11 @@
     <string name="title_ic_read_activity">ICカード読み取り</string>
     <string name="ic_read_text">ICカードをスマートフォンにかざしてください。</string>
     <!-- ICカード履歴一覧画面 -->
+    <string name="title_ic_history_list_activity">履歴一覧</string>
     <string name="ic_history_header_text">私用の履歴はチェックを外してください</string>
     <string name="ic_history_save_button">保存</string>
     <!-- 履歴保存確定画面 -->
+    <string name="title_ic_history_list_check_activity">保存履歴確認</string>
     <string name="ic_history_list_check_header_text">以下の内容で保存します。\n※暗くなっている項目は勤務表に追加されません。</string>
     <string name="ic_history_list_check_save_button">保存を確定する</string>
 </resources>
