--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="ic_history_list_save_header_text">以下の内容で保存します。\n※暗くなっている項目は勤務表に追加されません。</string>
     <string name="ic_history_list_save_savebutton">保存を確定する</string>
     <string name="ic_history_list_save_savetoast">履歴を保存しました。</string>
+    <!-- 履歴一覧画面 -->
+    <string name="title_ic_history_list_activity">履歴一覧</string>
 </resources>
