--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="title_ic_read_activity">ICカード読み取り</string>
     <string name="ic_read_text">ICカードをスマートフォンにかざしてください。</string>
     <!-- ICカード読み取り履歴一覧画面 -->
-    <string name="title_ic_read_history_list_activity">履歴一覧</string>
+    <string name="title_ic_read_history_list_activity">読み取り履歴リスト</string>
     <string name="ic_read_history_header_text">私用の履歴はチェックを外してください</string>
     <string name="ic_read_history_save_button">保存</string>
     <string name="ic_read_history_list_alert_dialog_title">読み取り情報削除</string>
