--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Transportation Expenses</string>
+    <string name="app_name">パスモデダスヨ スイカモデルヨ</string>
     <!-- メイン画面 -->
     <string name="main_button_ic_read">ICカードを読み取る</string>
     <string name="main_button_table_make">勤務表を作成する</string>
@@ -18,7 +18,7 @@
     <string name="ic_read_history_list_alert_dialog_cancel">キャンセル</string>
     <!-- 履歴保存確定画面 -->
     <string name="title_ic_history_list_save_activity">保存履歴確認</string>
-    <string name="ic_history_list_save_header_text">以下の内容で保存します。\n※暗くなっている項目は勤務表に追加されません。</string>
+    <string name="ic_history_list_save_header_text">以下の内容で保存します。</string>
     <string name="ic_history_list_save_savebutton">保存を確定する</string>
     <string name="ic_history_list_save_savetoast">履歴を保存しました。</string>
     <!-- 履歴一覧画面 -->
